# python-project-cicd

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  run.ps1  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
configurations/: .flake8  .pydocstyle  .pylintrc
docker/: .env  Dockerfile  docker-compose copy.yml  docker-compose.yml
docs/: changelog_link.md  conf.py  development.rst  docker.rst  folderstructure.rst  index.rst  license.rst  technologystack.rst  vscode.rst
docs/source/: modules.rst  testapp.rst  testapp.subpackage.rst
docsmisc/visio/: system_drawings.vsdx
pip-wheel-metadata/testapp.dist-info/: METADATA  entry_points.txt
requirements/: dev.in  dev.txt  docs.in  docs.txt  style.in  style.txt  tests.txt  typing.txt
src/testapp/: __main__.py  cli.py  testappprime.py  version.py
src/testapp/subpackage/: testapp_subpackage.py
tests/: conftest.py  test_testapp.py
tests/test_subpackage/: conftest.py  test_subpackage.py
