[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools == 57.0.0", "wheel == 0.36.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.mypy]
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
warn_no_return = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
disallow_any_generics = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
pretty = true
always_false = "MYPYC"
python_version = "3.8"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = false

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = ["tests"]
