[metadata]
name = testapp
version = version
description = This is a test application example
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = PR electronix A/S
author_email = dev@prelectronics.com
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: OSI Approved :: BSD License,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages=find:
platforms = any
python_requires = 
    >= 3.6, != 3.7.x, <= 3.10
install_requires=
    #pandas == 1.1.5,
    #django == 1.1.1

[options.entry_points]
console_scripts =
    testapp = testapp.cli:main

[options.packages.find]
where = src

[bdist_wheel]
universal = false
